--- a/index.html
+++ b/index.html
@@ -140,8 +140,7 @@
                                     <div class="ts-item-body">
                                         <h4>Web Development</h4>
                                         <p class="mb-0">
-                                            I deliver intuitive and fast websites, web portals, and other web solutions
-                                            that bring about digital transformation and enhance business workflows.
+                                            HTML & CSS Responsive Web Design · React JS Development · Node.js Development · Javascript Development
                                         </p>
                                     </div>
                                     <!--end ts-item-body-->
@@ -168,9 +167,9 @@
                                     </div>
                                     <!--end ts-item-header-->
                                     <div class="ts-item-body">
-                                        <h4>Dapp Design</h4>
+                                        <h4>Dapp Development</h4>
                                         <p class="mb-0">
-                                            Inspirational designs, illustrations, and graphic elements.
+                                            Design and develop peer to peer Decentralised Applications for a wide array of industries.
                                         </p>
                                     </div>
                                     <!--end ts-item-body-->
@@ -197,10 +196,9 @@
                                     </div>
                                     <!--end ts-item-header-->
                                     <div class="ts-item-body">
-                                        <h4>Smart Contract</h4>
+                                        <h4>Whitepaper</h4>
                                         <p class="mb-0">
-                                            I develop digital wallets with smart contracts to enable businesses to
-                                            execute credible and fast transactions without any third-party dependence.
+                                            I help to ensure that you get a quality white paper without having to spend the time to write it yourself.
                                         </p>
                                     </div>
                                     <!--end ts-item-body-->
