--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
                             <!--<i class="fa fa-download small mr-2"></i>-->
                             <!--Download CV-->
                             <!--</a>-->
-                            <a href="./assets/resume/Qendrim_Leci.pdf" class="ts-btn-effect mr-2">
+                            <a href="./assets/resume/Qendrim_Leci.pdf" class="ts-btn-effect mr-2" download>
                                 <span class="ts-visible btn btn-outline-light">
                                     <i class="fa fa-download small mr-2"></i>
                                     Download CV
