--- a/index.html
+++ b/index.html
@@ -390,13 +390,13 @@
                             <!--end ts-gallery__image-->
                         </a>
                         <!--end card ts-gallery__item-->
-                        <a href="assets/img/Contribute.png" class="card ts-gallery__item popup-image"
+                        <a href="assets/img/RinkebySquirrels.png" class="card ts-gallery__item popup-image"
                             data-animate="ts-fadeInUp">
                             <div class="ts-gallery__image">
-                                <img src="assets/img/Contribute.png" class="card-img" alt="">
+                                <img src="assets/img/RinkebySquirrels.png" class="card-img" alt="">
                                 <div class="ts-gallery__item-description">
-                                    <h6 class="ts-opacity__50">DeFi</h6>
-                                    <h4>Contribute</h4>
+                                    <h6 class="ts-opacity__50">Generative Art NFT</h6>
+                                    <h4>Scrappy Squirrels</h4>
                                 </div>
                                 <!--end ts-gallery__item-description-->
                             </div>
@@ -404,7 +404,7 @@
                         </a>
 
                         <!--end card ts-gallery__item-->
-                        <a href="assets/img/Kinglive-v2-market.png" class="card ts-gallery__item popup-image"
+                        <!--<a href="assets/img/Kinglive-v2-market.png" class="card ts-gallery__item popup-image"
                             data-animate="ts-fadeInUp">
                             <div class="ts-gallery__image">
                                 <img src="assets/img/Kinglive-v2-market.png" class="card-img" alt="">
@@ -412,12 +412,10 @@
                                     <h6 class="ts-opacity__50">NFT MARKETPLACE</h6>
                                     <h4>Kinglive V2</h4>
                                 </div>
-                                <!--end ts-gallery__item-description-->
                             </div>
-                            <!--end ts-gallery__image-->
-                        </a>
+                        </a>-->
                         <!--end card ts-gallery__item-->
-                        <a href="assets/img/EGOZE_Play_to_Earn_Game.png" class="card ts-gallery__item popup-image"
+                        <!-- <a href="assets/img/EGOZE_Play_to_Earn_Game.png" class="card ts-gallery__item popup-image"
                             data-animate="ts-fadeInUp">
                             <div class="ts-gallery__image">
                                 <img src="assets/img/EGOZE_Play_to_Earn_Game.png" class="card-img" alt="">
@@ -425,10 +423,8 @@
                                     <h6 class="ts-opacity__50">Play to Earn Game</h6>
                                     <h4>EGOZE</h4>
                                 </div>
-                                <!--end ts-gallery__item-description-->
                             </div>
-                            <!--end ts-gallery__image-->
-                        </a>
+                        </a> -->
                         <!--end card ts-gallery__item-->
                         <a href="assets/img/Flipp.png" class="card ts-gallery__item popup-image"
                             data-animate="ts-fadeInUp">
