--- a/index.html
+++ b/index.html
@@ -404,16 +404,16 @@
                         </a>
 
                         <!--end card ts-gallery__item-->
-                        <!--<a href="assets/img/Kinglive-v2-market.png" class="card ts-gallery__item popup-image"
+                        <a href="assets/img/hippo_nft.png" class="card ts-gallery__item popup-image"
                             data-animate="ts-fadeInUp">
                             <div class="ts-gallery__image">
-                                <img src="assets/img/Kinglive-v2-market.png" class="card-img" alt="">
+                                <img src="assets/img/hippo_nft.png" class="card-img" alt="">
                                 <div class="ts-gallery__item-description">
-                                    <h6 class="ts-opacity__50">NFT MARKETPLACE</h6>
-                                    <h4>Kinglive V2</h4>
+                                    <h6 class="ts-opacity__50">NFT</h6>
+                                    <h4>CryptoHippos</h4>
                                 </div>
                             </div>
-                        </a>-->
+                        </a>
                         <!--end card ts-gallery__item-->
                         <!-- <a href="assets/img/EGOZE_Play_to_Earn_Game.png" class="card ts-gallery__item popup-image"
                             data-animate="ts-fadeInUp">
