--- a/index.html
+++ b/index.html
@@ -63,6 +63,9 @@
                     <div class="col-md-8">
                         <!--SOCIAL ICONS-->
                         <figure class="ts-social-icons mb-4">
+                            <a href="https://www.linkedin.com/in/qendrim-leci-b43692234/" class="mr-3">
+                                <i class="fab fa-linkedin"></i>
+                            </a>
                             <a href="https://discordapp.com/users/qendrimleci2022#7071" class="mr-3">
                                 <i class="fab fa-discord"></i>
                             </a>
@@ -628,6 +631,9 @@
                         <div class="footer-social text-right">
                             <!--SOCIAL ICONS-->
                             <figure class="ts-social-icons mb-4">
+                                <a href="https://www.linkedin.com/in/qendrim-leci-b43692234/" class="mr-3">
+                                    <i class="fab fa-linkedin"></i>
+                                </a>
                                 <a href="https://discordapp.com/users/qendrimleci2022#7071" class="mr-3">
                                     <i class="fab fa-discord"></i>
                                 </a>
