--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                             <a href="https://www.linkedin.com/in/qendrim-leci-b43692234/" class="mr-3">
                                 <i class="fab fa-linkedin"></i>
                             </a>
-                            <a href="https://discordapp.com/users/qendrimleci2022#7071" class="mr-3">
+                            <a href="https://discordapp.com/users/qendrim#7071" class="mr-3">
                                 <i class="fab fa-discord"></i>
                             </a>
                             <a href="https://t.me/qendrim1eci" class="mr-3">
@@ -620,7 +620,7 @@
                             <img src="assets/img/icon-talk-bubble.png" class="mb-4" alt="">
                             <h5>Discord Chat</h5>
                             <div class="ts-opacity__50">
-                                <figure>qendrimleci2022#7071</figure>
+                                <figure>qendrim#7071</figure>
                             </div>
                             <!--end ts-opacity__50-->
                         </div>
@@ -634,7 +634,7 @@
                                 <a href="https://www.linkedin.com/in/qendrim-leci-b43692234/" class="mr-3">
                                     <i class="fab fa-linkedin"></i>
                                 </a>
-                                <a href="https://discordapp.com/users/qendrimleci2022#7071" class="mr-3">
+                                <a href="https://discordapp.com/users/qendrim#7071" class="mr-3">
                                     <i class="fab fa-discord"></i>
                                 </a>
                                 <a href="https://t.me/qendrim1eci" class="mr-3">
