--- a/index.html
+++ b/index.html
@@ -592,8 +592,8 @@
                             <img src="assets/img/icon-pin.png" class="mb-4" alt="">
                             <h5>Address</h5>
                             <div class="ts-opacity__50">
-                                <figure class="mb-0">Xhevdet Leci Street, Barileva</figure>
-                                <figure>Tirana, Tirane 1001</figure>
+                                <figure class="mb-0">Bije Vokshi Street, 10000 Emshir</figure>
+                                <figure>Prishtina</figure>
                             </div>
                             <!--end ts-opacity__50-->
                         </div>
