--- a/index.html
+++ b/index.html
@@ -258,8 +258,8 @@
                                 <dd>+377 44223306</dd>
                                 <dt>Email:</dt>
                                 <dd>qendrimleci2022@gmail.com</dd>
-                                <!-- <dt>Twitter:</dt>
-                                <dd></dd> -->
+                                <dt>Telegram:</dt>
+                                <dd>@qendrim1eci</dd>
                             </dl>
                             <hr class="ts-hr-light mb-5">
                             <a href="mailto:qendrimleci2022@gmail.com" class="ts-btn-effect mr-2">
